Added Maturity model diagram as table.
Tried sooo many methods to getting an SVG with fonts in it. Just couldn't make the gradients work in the end.

--- a/source/assets/scss/modules/svg.scss
+++ b/source/assets/scss/modules/svg.scss
@@ -1,8 +1,9 @@
-
+@import '../settings';
+@import '../mixins/functions';
 svg {
 	text {
-		font-family: GT-America, Roboto Light, sans-serif; 
-		font-weight: 400;
+		font-family: $font_sans; //GT-America, Roboto Light, sans-serif; 
+		// font-weight: 400;
 	}
 	 // normalize with css var
     fill: currentColor;
