--- a/source/assets/scss/views/products.scss
+++ b/source/assets/scss/views/products.scss
@@ -383,7 +383,12 @@ table.model { // diagram
     }
 }
 
-
+.color-ccms-bright {
+    color: $color_ccms-bright;
+}
+.color-ccms-dark {
+    color: $color_ccms-dark;
+}
 // .drop-taper { // sort of a tapering drop shadow for a thing above it
 //     position:relative;
 //     // @include shadow-anarchy(0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset);
