--- a/source/cloud-compliance-management-system/index.html.slim
+++ b/source/cloud-compliance-management-system/index.html.slim
@@ -26,9 +26,37 @@ subnav:
     title: "Configurations"
     slug: "configurations"
   -
+    title: "Pricing"
+    slug: "pricing"
+  -
     title: "Get Started"
     slug: "start"
-
+stats_list:
+  - 
+    image: "https://images.ctfassets.net/189dvqdsjh46/Wya4eSOBXCvaLlatIZN4y/0469709df8f5d0f3141aca0de951e9d7/100m_records.svg"
+    desc: "We've handled over 100 million patient records."
+    url: ""
+    width: 200
+  - 
+    image: "https://images.ctfassets.net/189dvqdsjh46/6qs1qJbcBXtYj8xt2fjFnk/606aec3631dde9225f0a7a4b72e37533/featured_partners.svg"
+    desc: "Learn how we can support you on AWS, Azure, and GCP."
+    url: "/cloud-compliance/"
+    width: 200
+  -
+    image: "https://images.ctfassets.net/189dvqdsjh46/0tDICrmYSfsnYSzn1gzgR/b4d28041c0d1e70989b151a97b0fbfbd/us_eu.png"
+    desc: "Multiple Geographies in the US and Europe"
+    url: "/cloud-compliance/global/"
+    width: 200
+  - 
+    image: "https://images.ctfassets.net/189dvqdsjh46/5KBMSDx9oE9NYh8NjmnCzb/19e394217d083a88f9eb6835bb163f4a/1k_assessments.svg"
+    desc: "1000 Customer Assessments. Zero Failures."
+    url: "/cloud-compliance/"
+    width: 200
+  - 
+    image: "https://images.ctfassets.net/189dvqdsjh46/94IPZQFdyyziK7tIH9iZH/1d3e925460ec3f1c7065c90ab1aede8a/oss___education.svg"
+    desc: "We're built on open source, and provide deep educational resources"
+    url: "/academy/"
+    width: 200
 ---
 ruby:
   current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
@@ -101,21 +129,19 @@ section.section-article.bg-white
       h3.headline-3.group.text-center.color-ccms-dark API-Driven Compliance
   .collection
     .row.align-center.align-middle.group--2x
+      .columns.small-12.medium-6.large-5
+        h3.headline-5 Audited
+        p Each configuration supported by Datica CCMS has been audited against HITRUST CSF v9.1, meaning a configuration is meant to be compliant against the regimes of HIPAA, GDPR, and GxP. It tracks configuration changes with each CSF update.
+      .columns.small-12.medium-6.large-5
+        .logo-cloud.align-center.text-center
+          - data.views.home.badges.each do |logo|
+            img.lozad.logo-size--large.logo-cloud--item alt="#{logo["name"]}" data-src="#{logo["fileUrl"]}?fm=png&w=200" /
+    .row.align-center.align-middle.group--2x
       .columns.small-12.medium-8.large-6
         h3.headline-5 Real Time
         p Datica CCMS checks configuration states every day and tracks the states in a historical data model. This is the missing piece for modern cloud compliance: Constant understanding of the precise state of your cloud environments.
       .columns.small-12.medium-4.large-4
         img.lozad src=loader_rect data-src="https://images.ctfassets.net/189dvqdsjh46/3SYqUI2cG1VPfpGvep5BD5/973d63a40f147c7917497ccc855cef2d/ccms-logging-crop.jpg"
-    .row.align-center.align-middle.group--2x
-      .columns.small-12.medium-8.large-5
-        h3.headline-5 Audited
-        p Each configuration supported by Datica CCMS has been audited against HITRUST CSF v9.1, meaning a configuration is meant to be compliant against the regimes of HIPAA, GDPR, and GxP. It tracks configuration changes with each CSF update.
-      .columns.small-12.medium-4.large-5
-        .logo-cloud.align-center
-          - data.views.home.badges.each do |logo|
-            img alt="#{logo["name"]}" class="lozad logo-size--large" data-src="#{logo["fileUrl"]}?fm=png&w=200" /
-
-
     .row.align-center.align-middle.group--2x
       .columns.small-12.medium-8.large-6
         h3.headline-5 Uniquely Dynamic
@@ -126,22 +152,37 @@ section.section-article.bg-white
       .columns.small-12.medium-8.large-6
         h3.headline-5 Zero Lock-in
         p As with all of Datica's products, there is zero lock-in. Every service supported by the CCMS will have its configurations published to be publicly reviewable. Full transparency on what we monitor and why is critical to earning trust.
-
       .columns.small-12.medium-4.large-4
-        img.lozad src=loader_rect data-src="https://images.ctfassets.net/189dvqdsjh46/3SYqUI2cG1VPfpGvep5BD5/973d63a40f147c7917497ccc855cef2d/ccms-logging-crop.jpg"
-  .row.align-center.small-up-1.medium-up-2.large-up-2.group
-    .column
-    .column
-    .column
-    .column
+        img.lozad src=loader_rect data-src="https://images.ctfassets.net/189dvqdsjh46/dxlAzg0xvSNx6xwJ6GIke/2edad211a6ab0d17ba40226771423f1b/zero-lock-in.svg"
+
+section.bg-gray-12.section-article.drop-inset--v
   .row.align-center
-    .columns.small-12.large-8
-      h2.headline-4.group Datica helps you comply with multiple compliance frameworks.
-      .row.medium-up-5.align-middle.align-center
-        - data.views.home.badges.each do |logo|
-          - logo.logoSize == "xlarge" ? logopad = "pad--sm" : nil
-          .column
-            img alt="#{logo["name"]}" class="lozad" data-src="#{logo["fileUrl"]}" /
+    .columns.small-12.large-11.text-center
+      h3.headline-4 Proven and Reliable
+  .row.align-center.small-up-4.medium-up-5.large-up-6.group--2x
+    - current_page.data.stats_list.each do | stat |
+      .column
+        - if stat.url != ""
+          a href=stat.url title=stat.desc
+            img.lozad.logo-size--xlarge data-src=stat.image alt=stat.desc
+        - else
+            img.lozad.logo-size--xlarge data-src=stat.image alt=stat.desc
+  .row.align-center
+    .columns.small-12.large-11.text-center
+      h3.headline-4.nomargin Trusted by the Best
+      .logo-cloud.grayscale.faded
+        - data.views.home.customers.each do |logo| # trying this as data-interchange for perf
+          img alt="#{logo["name"]}" class=("lozad logo-cloud--item logo-size--#{logo['logoSize']}") data-src="/public/img/customer-logos/sm/#{logo['file']}.png" /
+
+section.bg-dark.bg-purple-bp-grad.product-ccms
+  .section-article--med.container-image--center.lozad.text-center data-background-image=bg_image
+    .row.align-center.align-middle.z-10.relative
+      .columns.small-12.medium-8
+        h2.headline-3.text-light Don't just guess—<strong>know</strong> the precise compliance state of your cloud environments with Datica CCMS.
+    .waypoint
+      h4.headline-5.spaced-out Get Started Today
+      a.pulse.link-white-plain href="##{current_page.data.subnav.last.slug}" title="Inquire Today"
+        = inline_svg("icon-angle-down-large", class: "icon-size--large waypoint-icon svg-color--white")
 
 
 /.strip.strip-small.strip-ccms
@@ -153,7 +194,7 @@ section.bg-white id=current_page.data.subnav[2].slug data-magellan-target=curren
         p The proliferation of abstracted cloud services has increased in an effort to improve developer experience (a good thing). As a result, most cloud environments are a constellation of managed services and microservices. The cloud is no longer simply an operating system on someone else's hard drive.
         p.group But increased abstraction has meant greater control has been taken away from the end user's ability to attest to compliance assurances (a bad thing). The entire layer of "Services" on top of traditional VMs has completely changed how compliance should be measured, monitored, and managed.
         h3.headline-4.text-center How CCMS Helps You Pass Audits
-        p This is a typical maturity model that your company will be audited against. It defines Privacy vs. Security vs. Compliance.
+        p This is a typical <a href="/academy/steps-to-climbing-maturity-model/" title="Steps to the Maturity Model">maturity model</a> that your company will be audited against. It defines Privacy vs. Security vs. Compliance.
 
     .row.align-center
       .columns.small-12.xlarge-10
@@ -214,7 +255,7 @@ section.bg-white id=current_page.data.subnav[2].slug data-magellan-target=curren
       .columns.small-12.medium-8.large-6
         p.lead <strong>Datica CCMS solves this problem.</strong> Simply plug <a href="#configs" title="Configurations">available services</a> into the CCMS and let us continuously monitor the compliance state of a service. Users can be assured the configurations map to the proper HITRUST CSF controls, thus generating a compliant posture against regimes such as HIPAA, GDPR, and GxP.
 
-section.section-article.container-gray-12 id=current_page.data.subnav[3].slug data-magellan-target=current_page.data.subnav[3].slug
+section.section-article.bg-gray-12 id=current_page.data.subnav[3].slug data-magellan-target=current_page.data.subnav[3].slug
   .row.align-center.align-middle
     .columns.small-12.medium-6.large-6
       h2.headline-3 Make any cloud service compliant
@@ -224,26 +265,40 @@ section.section-article.container-gray-12 id=current_page.data.subnav[3].slug da
       ul.no-bullet
         li.group
           a.media-object.align-middle.container-color--white.drop.radius href="/academy/aws-rds-guide-how-to-configure-rds-to-comply-with-hipaa-and-hitrust" title="AWS RDS Guide"
-            .media-object-section
+            .media-object-section.width-half
               - img_rds = "https://images.ctfassets.net/189dvqdsjh46/3Ml0plud3iWwgikOGEECi6/fe49398f8baeb5593ebb39bd10f637e9/guide-aws-rds.jpg"
               img.img-cover.icon-size--xlarge.lozad src=img_rds data-src=img_rds alt="AWS RDS Guide"
             .media-object-section
               h4.headline-5 AWS RDS Guide
         li.group
           a.media-object.align-middle.container-color--white.drop.radius href="/academy/azure-cosmos-db-guide-how-to-configure-cosmos-db-to-comply-with-hipaa-and-hitrust" title="Azure CosmosDB Guide"
-            .media-object-section
+            .media-object-section.width-half
               - img_az = "https://images.ctfassets.net/189dvqdsjh46/3plStwctlKGM2Mg0sWIIMm/bfe93306bd50af4a08a19937882b3724/guide-azure-cosmos.jpg"
               img.img-cover.icon-size--xlarge.lozad src=img_az data-src=img_az alt="Azure CosmosDB Guide"
             .media-object-section
               h4.headline-5 Azure CosmosDB Guide
         li.group
           a.media-object.align-middle.container-color--white.drop.radius href="/academy/google-cloud-sql-guide-how-to-configure-gcp-cloud-sql-to-comply-with-hipaa" title="GCP Cloud SQL Guide"
-            .media-object-section
+            .media-object-section.width-half
               - img_gcp = "https://images.ctfassets.net/189dvqdsjh46/5Pwsy82W4g2i2AOKoGiMyO/ae8de7bf28cb3d28b1e65401ed4bb290/guide-gcp-sql.jpg"
               img.img-cover.icon-size--xlarge.lozad src=img_gcp data-src=img_gcp alt="GCP Cloud SQL Guide"
             .media-object-section
               h4.headline-5 GCP Cloud SQL Guide
 
+section.section-article.bg-white id=current_page.data.subnav[4].slug data-magellan-target=current_page.data.subnav[4].slug
+  .row.align-center.align-middle
+    .columns.small-12.medium-6.large-6
+      h2.headline-3 Uniquely designed to fit the specific requirements of healthcare compliance
+      ul
+        li Only solution with built in policies and procedures designed to meet the needs of regimes like HIPAA, HITRUST, GDPR, and GxP.
+        li Only continuous monitoring tool to focus on checking specific compliance controls.
+        li Only solution that helps developers with the most important part of compliance: proving it. Unique features make attestation easier.
+        li Only compliance solution to focus on the post- cloud era, working hand-in-hand with the managed services on top of cloud providers that you want to use. It is not a VM or host-based
+        li CCMS leaves security implementation up to you, just the way you like it: pick the tools you want to use and solve security your way. We'll then check to ensure it is compliant.
+    .columns.small-12.medium-6.large-6
+      h2.headline-3 Simple, straightforward pricing
+      p.lead Datica CCMS is $1,000/mo. per service type + $10/mo. per instance
+      p A 'service' is any supported cloud provider service, like AWS RDS, Azure Cosmos DB, or Google Cloud SQL
 /section#configs.section-article.container-gray-11
   .row.align-center
     .columns.small-12.large-8
@@ -293,7 +348,7 @@ section.section-article.container-gray-12 id=current_page.data.subnav[3].slug da
             / = partial "partials/snippets/form", :locals => { :the_form => form_1["custom_form"], :form_id => "configForm" }
 
 .strip.strip-small.strip-ccms
-section.bg-dark.bg-purple-bp-grad.product-ccms id=current_page.data.subnav[4].slug data-magellan-target=current_page.data.subnav[4].slug
+section.bg-dark.bg-purple-bp-grad.product-ccms id=current_page.data.subnav[5].slug data-magellan-target=current_page.data.subnav[5].slug
   .section-article.container-image--center.lozad data-background-image=bg_image
     .row.align-center.align-middle.z-10.relative
       .columns.small-12.medium-6.large-5
