WIP webinar trailer features.

--- a/source/contentful_templates/webinar.html.slim
+++ b/source/contentful_templates/webinar.html.slim
@@ -50,6 +50,7 @@ ruby:
 
 / section#top.container-gray-2.container-image-fill data-interchange="[#{thumb}, small], [#{thumb}#{image_featured_large}, large]"
 .strip-bright.strip-small
+
 .container-gray-11
     = partial "partials/head/header", :locals => { :style => "dark" }
     section#webinar.section-article--med data-webinar = p._meta.id
@@ -58,6 +59,11 @@ ruby:
                 a href="/webinars" title="See all webinars"
                     = inline_svg("icon-webinar", class: "icon-size--large")
                     h2.headline-5.spaced-out Datica Webinars
+                    h2 = p.trailer_preview.id
+                - if p.has_key("trailer_preview")
+                    
+                    = Kramdown::Document.new(data.site.videos[p.trailer_preview.id].custom_form).to_html
+
         .row.align-center
             .columns.small-12.large-10.group
                 #webinar-container.preview.container-gray-3.relative href="/webinars/#{p["slug"]}" title=("View webinar")
