--- a/source/partials/cards/_webinar-poster.slim
+++ b/source/partials/cards/_webinar-poster.slim
@@ -25,20 +25,23 @@ ruby:
     #if is_future == true
     #    cta_label = "Register Today"
     #end
-
-a.preview.container-gray-2.relative href="/webinars/#{entry["slug"]}" title=("View webinar") data-background-image="#{thumb}" data-webinar-id = entry._meta.id
-    .webinar-meta.z-10.relative
-        .preview-subhead Datica Webinar
-        .preview-title
-            h2.headline-4.nomargin = entry["title"]
-        div.preview-info(style="margin-bottom: 0.2em;")
-            = inline_svg("small/icon-event-note", class: "icon-inline icon-left")
-            / span = entry['event_date'].strftime('%B %-d, %Y')
-            span = event_date
-        - if entry.has_key?("discovery_topic")
-            div.preview-topic
-                span.label.dark.round = data.site.discover[entry.discovery_topic.id].title
-    .absolute.preview-bg.z-0.group
-        img.lozad.img-cover.img-multiply src="#{thumb}?w=250&fm=jpg&q=10" data-src="#{thumb}?w=800"
-    .preview-cta.headline-5.spaced-out.show-for-large.text-right = cta_label
-    = inline_svg("icon-video-play-circle", class: "show-for-large preview-icon icon-size--xlarge svg-color--white")
+- if entry.has_key("trailer_preview")
+    h2 = entry.trailer_preview.id
+    = Kramdown::Document.new(data.site.videos[entry.trailer_preview.id].custom_form).to_html
+- else
+    a.preview.container-gray-2.relative href="/webinars/#{entry["slug"]}" title=("View webinar") data-background-image="#{thumb}" data-webinar-id = entry._meta.id
+        .webinar-meta.z-10.relative
+            .preview-subhead Datica Webinar
+            .preview-title
+                h2.headline-4.nomargin = entry["title"]
+            div.preview-info(style="margin-bottom: 0.2em;")
+                = inline_svg("small/icon-event-note", class: "icon-inline icon-left")
+                / span = entry['event_date'].strftime('%B %-d, %Y')
+                span = event_date
+            - if entry.has_key?("discovery_topic")
+                div.preview-topic
+                    span.label.dark.round = data.site.discover[entry.discovery_topic.id].title
+        .absolute.preview-bg.z-0.group
+            img.lozad.img-cover.img-multiply src="#{thumb}?w=250&fm=jpg&q=10" data-src="#{thumb}?w=800"
+        .preview-cta.headline-5.spaced-out.show-for-large.text-right = cta_label
+        = inline_svg("icon-video-play-circle", class: "show-for-large preview-icon icon-size--xlarge svg-color--white")
