--- a/source/webinars/index.html.slim
+++ b/source/webinars/index.html.slim
@@ -26,9 +26,10 @@ ruby:
         - sorted_entries.take(1).each do | id, webinar_entry |
             - if webinar_entry.has_key?("event_date")
                 - if today.strftime("%F") >= webinar_entry['event_date'].strftime("%F") ? is_future = false : is_future = true
-            .row.align-center
+            = partial "partials/cards/webinar-poster", :locals => { :entry => webinar_entry, :is_future => is_future, :card_style => "horizontal" }
+            / .row.align-center
                 .columns.small-12.large-6
-                    = partial "partials/cards/webinar-poster", :locals => { :entry => webinar_entry, :is_future => is_future }
+                    
                 .columns.small-12.large-6
                     .lead
                         = Kramdown::Document.new(webinar_entry["summary"]).to_html
