A few late-breaking changes.
updated webinar-poster in a few spots.

--- a/source/assets/scss/settings.scss
+++ b/source/assets/scss/settings.scss
@@ -279,7 +279,7 @@ $global-radius:                 6px;
 $global-position: 1rem;
 $global-weight-normal: normal;
 $global-weight-bold: bold;
-$global-menu-padding: 0.9rem 1.1rem;
+$global-menu-padding: 0.8rem 1rem;
 $global-menu-nested-margin: 1rem;
 $global-text-direction:         ltr;
 $global-flexbox:                true; // watch this for any problems
@@ -501,8 +501,8 @@ $breadcrumbs-item-separator-item: '|';
 // 11. Button
 // ----------
 
-$button-padding: 0.75em 0.9em;
-$button-padding: 0.85em 1em;
+// $button-padding: 0.75em 0.9em;
+$button-padding: 0.8em 1em;
 $button-margin: 0 0 $global-margin 0;
 $button-fill: solid;
 $button-background: $primary-color;
