--- a/source/assets/scss/modules/overrides.scss
+++ b/source/assets/scss/modules/overrides.scss
@@ -228,7 +228,6 @@
         }
     }
 }
-
 .link-arrow {
     // @apply .uppercase .font-bold .text-base .no-underline .font-bold .text-green-deep .tracking-relaxed;
     &::after {
@@ -271,7 +270,7 @@
 }
 .link--white-parent { // when you need to style a link inside a component/partial
     a {
-        @include link-colors (white, $color_yellow-glow, true);
+        @include link-colors (white, $color_yellow-glow, false);
     }
 }
 .card {
